--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,33 +50,28 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.12.0-alpha02'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.work:work-runtime:2.9.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.credentials:credentials:1.2.0'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
+    implementation 'androidx.credentials:credentials-play-services-auth:1.2.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
+
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
     implementation 'com.google.maps.android:android-maps-utils:3.8.0'
-    implementation 'com.android.volley:volley:1.2.1'
-
-    // Re-enable multidex lib is min API is ever dropped below 21
-    // implementation "androidx.multidex:multidex:2.0.1"
-
-    implementation 'androidx.preference:preference-ktx:1.2.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'androidx.credentials:credentials:1.2.0'
-    implementation 'androidx.credentials:credentials-play-services-auth:1.2.0'
+    implementation 'com.google.android.material:material:1.12.0-alpha03'
     implementation 'com.google.android.libraries.identity.googleid:googleid:1.1.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
 
     implementation platform('com.google.firebase:firebase-bom:32.6.0')
     implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
     implementation 'com.android.volley:volley:1.2.1'
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0-rc01'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
 }
