--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,16 +61,18 @@ dependencies {
     implementation 'androidx.credentials:credentials-play-services-auth:1.2.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
 
-    implementation 'com.google.android.gms:play-services-maps:18.2.0'
     implementation 'com.google.maps.android:android-maps-utils:3.8.0'
     implementation 'com.google.android.material:material:1.12.0-alpha03'
     implementation 'com.google.android.libraries.identity.googleid:googleid:1.1.0'
+
+    implementation 'com.google.android.gms:play-services-base:18.3.0'
+    implementation 'com.google.android.gms:play-services-auth:21.0.0'
+    implementation 'com.google.android.gms:play-services-maps:18.2.0'
 
     implementation platform('com.google.firebase:firebase-bom:32.6.0')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-storage'
     implementation 'com.google.firebase:firebase-firestore'
-    implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
