--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,23 +52,24 @@ dependencies {
 
     implementation 'androidx.work:work-runtime:2.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.credentials:credentials:1.2.0'
+    implementation 'androidx.credentials:credentials:1.2.2'
     implementation 'androidx.preference:preference-ktx:1.2.1'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
-    implementation 'androidx.credentials:credentials-play-services-auth:1.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.0'
+    implementation 'androidx.credentials:credentials-play-services-auth:1.2.2'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
 
     implementation 'com.google.maps.android:android-maps-utils:3.8.0'
-    implementation 'com.google.android.material:material:1.12.0-alpha03'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.google.android.libraries.identity.googleid:googleid:1.1.0'
 
-    implementation 'com.google.android.gms:play-services-base:18.3.0'
-    implementation 'com.google.android.gms:play-services-auth:21.0.0'
+    implementation 'com.google.android.gms:play-services-base:18.4.0'
+    implementation 'com.google.android.gms:play-services-auth:21.2.0'
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
 
+    // Keep BOM at 32.6 so that API 21 (Android 5) devices are supported
     implementation platform('com.google.firebase:firebase-bom:32.6.0')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-storage'
@@ -76,5 +77,5 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
-    implementation 'androidx.activity:activity:1.8.0'
+    implementation 'androidx.activity:activity-ktx:1.9.0'
 }
