--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,12 @@ plugins {
 
 android {
 
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "de.eloc.eloc_control_panel_2"
         minSdk 21
-        //noinspection EditedTargetSdkVersion
-        targetSdk 34
+        targetSdk 35
         versionCode 50
         versionName '5.24'
         versionNameSuffix 'AppBeta'
@@ -39,26 +38,26 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     namespace 'de.eloc.eloc_control_panel'
 }
 
 dependencies {
 
-    implementation 'androidx.work:work-runtime:2.9.0'
+    implementation 'androidx.work:work-runtime:2.10.0'
     implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'androidx.credentials:credentials:1.2.2'
+    implementation 'androidx.credentials:credentials:1.3.0'
     implementation 'androidx.preference:preference-ktx:1.2.1'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.3'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.3'
-    implementation 'androidx.credentials:credentials-play-services-auth:1.2.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.7'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
+    implementation 'androidx.credentials:credentials-play-services-auth:1.3.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
 
     implementation 'com.google.maps.android:android-maps-utils:3.8.0'
@@ -77,5 +76,6 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1'
-    implementation 'androidx.activity:activity-ktx:1.9.0'
+    implementation 'androidx.activity:activity-ktx:1.9.3'
+    implementation 'androidx.activity:activity:1.9.3'
 }
