--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,18 @@
         android:required="true" />
 
     <uses-permission android:name="android.permission.CAMERA" /> <!-- Old BT permissions -->
-
     <!--
     Official Android reference recomments setting  the maxSdkVersion for BLUETOOTH to 30.
     However, some ROMs (like MIUI still ask for the old permission when API level is higher
     that 30. For now, keep the setting at 40. In future, set higher values if needed.
-     -->
+    -->
     <uses-permission
         android:name="android.permission.BLUETOOTH"
         android:maxSdkVersion="40" />
     <uses-permission
         android:name="android.permission.BLUETOOTH_ADMIN"
         android:maxSdkVersion="40" /> <!-- New BT permissions -->
+    <uses-permission android:name="android.permission.ASSOCIATE_COMPANION_DEVICES" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
@@ -31,7 +31,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
-    <uses-feature android:name="android.software.companion_device_setup"/>
+
+    <uses-feature android:name="android.software.companion_device_setup" />
 
     <application
         android:name=".App"
@@ -46,53 +47,57 @@
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         tools:targetApi="tiramisu">
         <activity
-            android:name=".activities.UpdateAppActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.ProtocolVersionActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.TimeSyncActivity"
+            android:name=".activities.ManageAssociationsActivity"
             android:exported="false"
-            android:launchMode="singleInstance"
-            android:screenOrientation="sensorPortrait"
-            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi,LockedOrientationActivity" />
+        <activity
+            android:name=".activities.BluetoothSettingsActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi,LockedOrientationActivity" />
+        <activity
+            android:name=".activities.UpdateAppActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
             tools:ignore="DiscouragedApi,LockedOrientationActivity" />
         <activity
             android:name=".activities.LoadProfileActivity"
             android:exported="false"
-            android:screenOrientation="sensorPortrait"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
             tools:ignore="DiscouragedApi,LockedOrientationActivity" />
         <activity
             android:name=".activities.CommandLineActivity"
             android:exported="false"
-            android:screenOrientation="sensorPortrait"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
             tools:ignore="DiscouragedApi,LockedOrientationActivity" />
         <activity
             android:name=".activities.editors.OptionEditorActivity"
             android:exported="false"
-            android:screenOrientation="sensorPortrait"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
             tools:ignore="DiscouragedApi,LockedOrientationActivity" />
         <activity
             android:name=".activities.editors.TextEditorActivity"
             android:exported="false"
-            android:screenOrientation="sensorPortrait"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
             tools:ignore="DiscouragedApi,LockedOrientationActivity" />
         <activity
             android:name=".activities.DeviceActivity"
             android:exported="false"
-            android:screenOrientation="sensorPortrait"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
             tools:ignore="DiscouragedApi,LockedOrientationActivity" />
         <activity
             android:name=".activities.UserPrefsActivity"
             android:exported="false"
             android:label="@string/preferences"
-            android:parentActivityName=".activities.HomeActivity">
+            android:parentActivityName=".activities.HomeActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="DiscouragedApi,LockedOrientationActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -105,13 +110,13 @@
         <activity
             android:name=".activities.HomeActivity"
             android:exported="false"
-            android:screenOrientation="sensorPortrait"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
             tools:ignore="DiscouragedApi,LockedOrientationActivity" />
         <activity
             android:name=".activities.PermissionsSetupActivity"
             android:exported="true"
-            android:screenOrientation="sensorPortrait"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
             tools:ignore="DiscouragedApi,LockedOrientationActivity">
             <intent-filter>
@@ -127,13 +132,13 @@
         <activity
             android:name=".activities.DeviceSettingsActivity"
             android:exported="false"
-            android:screenOrientation="sensorPortrait"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
             tools:ignore="DiscouragedApi,LockedOrientationActivity" />
         <activity
             android:name=".activities.MapActivity"
             android:exported="false"
-            android:screenOrientation="sensorPortrait"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
             tools:ignore="DiscouragedApi,LockedOrientationActivity" />
         <activity
