--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-feature
         android:name="android.hardware.bluetooth"
         android:required="true" />
+    <uses-feature android:name="android.software.companion_device_setup" android:required="true" />
 
     <uses-permission android:name="android.permission.CAMERA" /> <!-- Old BT permissions -->
     <!--
@@ -31,8 +32,6 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
-
-    <uses-feature android:name="android.software.companion_device_setup" />
 
     <application android:largeHeap="true"
         android:name=".App"
